# lm_test

./: .gitignore  Cargo.toml
data/: 0007039-1935aa5f23d1c40ce4c88bfdddc82593.txt  0007136-49b4d73da0f239924f507b9c194d9365.txt  0007193-6264442c0d723af250c632af005c9b45.txt  0007334-b52d07c2c9943d1baf24d1bf74899062.txt  0007385-05c2812f48bc280b29cbef4f97847c2c.txt  0007404-1d9ea59456c96c627cafc805e885ffe0.txt  0007747-93bbbd28c26259a674789f947b32c50b.txt  0007796-a565959956f5a72ab8626d2217e0fde0.txt  0007984-7ed6af17916f2aab8550fea8bd80d83f.txt  0026028-d6c03a4c6e497411a560f0cf274f97a5.txt  0026320-887bc6b1cccb6b7ea6699ff26c51ac6e.txt  0026479-778fe3183bef552bfe9d9440e3ed5df5.txt  0026935-b95424a6c756a7278448fe6017dcc1ed.txt  0049138-5712859e0722933a4dffcc8c96661775.txt  0049159-9e4a7f96640c769d655cddbb74db91a4.txt  0049277-8098676838401279305e49e357a05e58.txt  0049766-740aa7bb7e8735fc8978d3bfa63c197b.txt  0049819-a34742e7af67a02ef49f6cbc07848d07.txt  0049892-23dda79d1a57900fc78750e7490adcd3.txt  0049967-855bfdc08772293270a093f7aa484b9a.txt  0050046-b812a9796837f17687029601236a57ef.txt  0050150-5dcd53b0af7d2a0819b5ed91d4e24040.txt  0050615-39c1560271aceecd42cdfe6ba6b50136.txt  0050838-f3786a018ee0cdf15ea91b6da1d963c5.txt  0050985-e764359bd4127e2d90919937e0d413cb.txt  0050991-a5fc27cdc97f2ee524210d3230b357fc.txt  0055101-bb0bca6c7f3aa38210765da1ca101620.txt  0059069-5d8e01c1fa3cd862d6b832c2bef8d172.txt  0059438-cf7facde937a45554b71aeafa300a057.txt  0059923-6fe47dfcdd8ac01465283c8e27b08b05.txt  0061434-0f609f2db92bd84229dfd07f4d3c7af5.txt  0061650-68413152a2473403a6ee83762e457312.txt  0064250-43adcd2e62cd575758bdcaca18d378f7.txt  0064557-3e2ce76c91dea2a8a086709afd35fd04.txt  0064560-436edab641580bc510bf8f2142aafe0e.txt  0064629-4ac190529c94f0e92dc361531f2ebcbe.txt  0066448-7158e33c6f39aa4a95b237ad1fcee00f.txt  0066449-7734b0f8ebdfaa09783362713238ef35.txt  0066544-dfd88b5eac118261f52cee87e1d87686.txt  0072137-e36a843093c0dce8a440ac476823e6a8.txt  (+959 more)
dfdx-even-newer/: Cargo.toml
dfdx-even-newer/src/: lib.rs
dfdx-even-newer/src/nn/: layer_norm.rs  npz.rs  safetensors.rs
dfdx-even-newer/src/nn/transformer/: encoder.rs  mha.rs
dfdx-even-newer/src/shapes/: mod.rs  realize.rs
dfdx-even-newer/src/tensor/: gradients.rs  tensor_impls.rs
dfdx-even-newer/src/tensor/cuda/: device.rs
dfdx-even-newer/src/tensor_ops/: mod.rs  realize_to.rs
dfdx-even-newer/src/tensor_ops/select_and_gather/: gather.cu  mod.rs
inference/: Cargo.toml
inference/src/: main.rs
src/: bar.rs  data.rs  lib.rs  lr_scheduler.rs  main.rs  position_encoding.rs  train.rs  utils.rs
src/indicatif/: draw_target.rs  progress_bar.rs  state.rs  style.rs
src/model/: mha.rs  mod.rs  position_encoding.rs  reverse_embedding.rs  transformer.rs
train/: Cargo.toml
train/src/: data.rs  main.rs
