[package]
name = "lm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#dfdx = "0.10.0"
#dfdx = {path="../dfdx-new-new", features=["cuda", "numpy"]}
#dfdx = {path="../dfdx-main", features=["cuda", "numpy"]}
dfdx = {path="../dfdx-even-newer", features=["cuda", "numpy"]}
dataflow = {git="https://github.com/Sidekick-AI/dataflow"}
dataflow_nlp = "0.1.0"
colored = "2.0.0"
zip = "0.6.2"

# For indicatif
regex = { version = "1.5.5", default-features = false, features = ["std"] }
lazy_static = "1.0"
number_prefix = "0.4"
console = { version = ">=0.9.1, <1.0.0", default-features = false }
unicode-segmentation = { version = "1.6.0", optional = true }
unicode-width = { version = "0.1.7", optional = true }
rayon = { version = "1.0", optional = true }
tensorboard-rs = "0.5.9"

num = "0.2.1"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"] }