[package]
name = "lm_test"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "train",
    "inference",
]


[dependencies]
zip = "0.6.2"
num-traits = "0.2.15"

# For indicatif
regex = { version = "1.5.5", default-features = false, features = ["std"] }
lazy_static = "1.0"
number_prefix = "0.4"
console = { version = ">=0.9.1, <1.0.0", default-features = false }
unicode-segmentation = { version = "1.6.0", optional = true }
unicode-width = { version = "0.1.7", optional = true }
rayon = { version = "1.0", optional = true }
tensorboard-rs = "0.5.9"
itertools = "0.10.5"

num = "0.2.1"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"] }

#dfdx = {path="dfdx-even-newer", features=["cuda", "numpy", "safetensors"]}
#dfdx = {path="../dfdx-main", features=["cuda", "numpy"]}
dfdx = {git="https://github.com/jafioti/dfdx", features=["numpy", "f16"]}
half = {git = "https://github.com/starkat99/half-rs.git", branch = "main", features = ["num-traits", "rand_distr"]}