[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lm_test = {path="../"}
dfdx = {path="../../dfdx-even-newer", features=["cuda", "numpy", "safetensors"]}
dataflow_nlp = "0.1.0"

# For interface
tui = {version="0.19.0"}
crossterm = "0.26.1"
pulldown-cmark = "0.9.2"
reqwest = {version="0.11.14", features=["json", "blocking"]}
unicode-width = "0.1.7"

num = "0.2.1"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"] }