[package]
name = "train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lm_test = {path="../"}
dataflow = {git="https://github.com/Sidekick-AI/dataflow", rev="938220899eb6055dd35d85e468a2827a55f73a82"}
dataflow_nlp = "0.1.0"
colored = "2.0.0"
itertools = "0.10.5"
num = "0.2.1"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"] }

#dfdx = {path="../dfdx-even-newer", features=["cuda", "numpy", "safetensors"]}
dfdx = {path="../../dfdx-main", features=["cuda", "numpy", "safetensors"]}