[package]
name = "train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lm_test = {path="../"}
#dataflow = {git="https://github.com/Sidekick-AI/dataflow", rev="c5a71b4a30ced7fc765977345d3c73bf89888b08"}
#dataflow_nlp = {git="https://github.com/Sidekick-AI/dataflow", rev="c5a71b4a30ced7fc765977345d3c73bf89888b08"}
dataflow = {path="../../../Documents/other/dataflow"}
dataflow_nlp = {path="../../../Documents/other/dataflow/dataflow_nlp"}
colored = "2.0.0"
itertools = "0.10.5"
num = "0.2.1"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"] }

#dfdx = {path="../dfdx-even-newer", features=["cuda", "numpy", "safetensors"]}
#dfdx = {path="../../dfdx-main", features=["cuda", "numpy", "safetensors"]}
dfdx = {git="https://github.com/jafioti/dfdx", features=["numpy", "f16"]}